--- a/usa-uk.html
+++ b/usa-uk.html
@@ -19,7 +19,7 @@
 <meta content='' property='og:description'/>
 <!--[if IE]> <script> (function() { var html5 = ("abbr,article,aside,audio,canvas,datalist,details," + "figure,footer,header,hgroup,mark,menu,meter,nav,output," + "progress,section,time,video").split(','); for (var i = 0; i < html5.length; i++) { document.createElement(html5[i]); } try { document.execCommand('BackgroundImageCache', false, true); } catch(e) {} })(); </script> <![endif]-->
 <title>
-    Emilia Rutkowska - page
+Emilia Rutkowska - page
 </title>
 <!-- Description and Keywords -->
 <meta content='Szybki Landing' name='description'/>
@@ -577,7 +577,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
-<h1>Where are you from?</h1>
+<h1>When ur done back for bonus ;D</h1>
 <div class='type'>
 <span>💓</span><h2></h2>
 </div>
@@ -595,8 +595,9 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
-<a class='about-button' href='pl.html'>Polska</a>
-<a class='about-button' href='usa-uk.html'>USA / UK</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 1</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/893/78329348'>Reflink 2</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 3</a>
 </div>
 </div>
 </div>
