--- a/usa-uk.html
+++ b/usa-uk.html
@@ -586,7 +586,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "Z CHĘCIĄ CI OBCIĄGNE !!!", "ZOBACZ MNIE NAGO !!!"], 
+                  strings: ["JESTEM GORĄCA!", "Z CHĘCIĄ CI OBCIĄGNE !!!", "I AM NAKEDD!", "WANT TO SEE ME?"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
