--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Description and Keywords -->
 <meta content='Szybki Landing' name='description'/>
 <meta content='Tu Są Dolary' name='keywords'/>
-<meta content='Lander 2' property='og:site_name'/>
+<meta content='Emilia Rutkowska - page' property='og:site_name'/>
 <meta content='https://landerhotsucz2.blogspot.com/' name='twitter:domain'/>
 <meta content='' name='twitter:title'/>
 <meta content='summary' name='twitter:card'/>
@@ -577,9 +577,10 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
+<h5>Snap 👻: xxxemilia01, Ig 🎬: xxemilia01</h5>
 <h1>Where are you from?</h1>
 <div class='type'>
-<span>💓</span><h2></h2>
+  <span>💓</span><h2></h2>
 </div>
 <!-- NAZWA 2 -->
 <script language='javascript' type='text/javascript'>//<![CDATA[
