--- a/pl.html
+++ b/pl.html
@@ -577,6 +577,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
+<h5>Snap 👻: xxxemilia01, Ig 🎬: xxemilia01</h5>
 <h1>Zrób konto na każdym i odbierz nagrodę :D</h1>
 <div class='type'>
 <span>💓</span><h2></h2>
