--- a/index.html
+++ b/index.html
@@ -578,7 +578,9 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
 <h5>Snap 👻: xxxemilia01, Ig 🎬: xxemilia01</h5>
-<h1>Where are you from?</h1>
+<h5>Po wykonaniu kilku refów zgłoś się na snapa z dowodem wykonania a dostaniesz nagrodę! ;D</h5>
+<h5>When u will do some refs, message on snap with proof, u will receive gift 😁<h5>
+<h3>Where are you from?</h3>
 <div class='type'>
   <span>💓</span><h2></h2>
 </div>
@@ -587,7 +589,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "Z CHĘCIĄ CI OBCIĄGNE !!!", "ZOBACZ MNIE NAGO !!!"], 
+                  strings: ["JESTEM GORĄCA!", "ZOBACZ MNIE NAGO !!!"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
