--- a/pl.html
+++ b/pl.html
@@ -587,7 +587,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "Z CHĘCIĄ CI OBCIĄGNE !!!", "ZOBACZ MNIE NAGO !!!"], 
+                  strings: ["JESTEM GORĄCA!", "ZOBACZ MNIE NAGO !!!"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
