--- a/pl.html
+++ b/pl.html
@@ -605,10 +605,13 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1485/78329348'>Reflink 1</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1479/78329348'>Reflink 2</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1473/78329348'>Reflink 3</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 4</a>
+
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/6mrs/3uNH'>Reflink 1</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1485/78329348'>Reflink 2</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1479/78329348'>Reflink 3</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1473/78329348'>Reflink 4</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 5</a>
+
 </div>
 </div>
 </div>
