--- a/usa-uk.html
+++ b/usa-uk.html
@@ -605,9 +605,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
+  <a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 2<a>
 <a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 1</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/893/78329348'>Reflink 2</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 3</a>
 </div>
 </div>
 </div>
