--- a/usa-uk.html
+++ b/usa-uk.html
@@ -586,7 +586,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
-<h5>Snap 👻: xxxemilia00, Ig 🎬: xxemilia01</h5>
+<h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5>
 <h1>When ur done back for bonus ;D</h1>
 <div class='type'>
 <span>💓</span><h2></h2>
@@ -605,8 +605,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
-  <a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 2<a>
-<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 1</a>
+  <a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 1<a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 2</a>
 </div>
 </div>
 </div>
