--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
-<a class='about-button' href='pl.html'>Polska</a>
-<a class='about-button' href='usa-uk.html'>USA / UK</a>
+<a class='about-button' href='pl.html'>Poland</a>
+<a class='about-button' href='usa-uk.html'>Others (USA/UK/Etc.)</a>
 </div>
 </div>
 </div>
