--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- NAZWA 1 -->
 <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5>
 <h5>Po wykonaniu kilku refów zgłoś się na snapa z dowodem wykonania a dostaniesz nagrodę! ;D</h5>
-<h5>When u will do some refs, message on snap with proof, u will receive gift 😁<h5>
-<h3>Where are you from?</h3>
+<h5>When u will do some refs (register, confirm mail), message on snap with proof, u will receive gift 😁<h5>
+<h2>Where are you from?</h2>
 <div class='type'>
   <span>💓</span><h2></h2>
 </div>
