--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "ZOBACZ MNIE NAGO !!!"], 
+                  strings: ["SNAP: emilia_rutk01", "IG: xxemilia01"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
