--- a/usa-uk.html
+++ b/usa-uk.html
@@ -586,17 +586,18 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
-<h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5>
-<h1>When ur done back for bonus ;D</h1>
-<div class='type'>
+<!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
 <span>💓</span><h2></h2>
+<br/>
+<h1>Do some then come back snap :D</h1>
+<div class='type'>
 </div>
 <!-- NAZWA 2 -->
 <script language='javascript' type='text/javascript'>//<![CDATA[
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "I AM NAKEDD!", "WANT TO SEE ME?"], 
+                  strings: ["SNAP: emilia_rutk01", "IG: xxemilia01"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
@@ -606,7 +607,10 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- LINKI -->
 <div class='profile-btns2'>
   <a class='about-button' target="_blank" href='https://allgo.xyz/link/683/78329348'>Reflink 1<a>
-<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 2</a>
+    <a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/MxAQ/5902'>Reflink 2</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/986/78329348'>Reflink 3</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/ykUA/RcUp'>Reflink 4</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/iNFf/DmbG'>Reflink 5</a>
 </div>
 </div>
 </div>
