--- a/pl.html
+++ b/pl.html
@@ -586,17 +586,18 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- header content -->
 <div class='caption v-middle'>
 <!-- NAZWA 1 -->
-<h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5>
-<h1>Zrób konto na każdym i odbierz nagrodę :D</h1>
-<div class='type'>
 <span>💓</span><h2></h2>
+<!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
+<br/>
+<h3>Zrób czym więcej i wróć na snapa :D</h3>
+<div class='type'>
 </div>
 <!-- NAZWA 2 -->
 <script language='javascript' type='text/javascript'>//<![CDATA[
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["JESTEM GORĄCA!", "ZOBACZ MNIE NAGO !!!"], 
+                  strings: ["SNAP: emilia_rutk01", "IG: xxemilia01"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
@@ -611,6 +612,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1479/78329348'>Reflink 3</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1473/78329348'>Reflink 4</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 5</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 6</a>
+
 
 </div>
 </div>
