--- a/pl.html
+++ b/pl.html
@@ -614,7 +614,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 5</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/14/78329348'>Reflink 6</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/115/78329348'>Reflink 7</a>
-
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1456/78329348'>Reflink 7</a>
 
 </div>
 </div>
