--- a/index.html
+++ b/index.html
@@ -591,7 +591,8 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 </div>
 <!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
 <br/>
-<h5>Po wykonaniu kilku refów zgłoś się na snapa ;D</h5>
+<h5>Skoro tu jesteś, liczysz na więcej? :D</h5>
+<h5>Jak skończysz napisz na snapie: <b>emilia_rutk19</b></h5>
 <!-- <h2>Where are you from?</h2> -->
 <!-- NAZWA 2 -->
 <script language='javascript' type='text/javascript'>//<![CDATA[
@@ -607,10 +608,10 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
               //]]></script>
 <!-- LINKI -->
 <div class='profile-btns2'>
-<a class='about-button' href='pl.html'>Poland REFs</a>
+<a class='about-button' href='pl.html'>Wchodzę</a>
 <br/><br/>
-<h5>When u will do some refs (register, confirm mail) message me on snap 😁<h5></h5>
-<a class='about-button' href='usa-uk.html'>Other REFs</a>
+<!-- <h5>When u will do some refs (register, confirm mail) message me on snap 😁<h5></h5>
+<a class='about-button' href='usa-uk.html'>Other REFs</a> -->
 </div>
 </div>
 </div>
