--- a/pl.html
+++ b/pl.html
@@ -589,7 +589,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <span>💓</span><h2></h2>
 <!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
 <br/>
-<h3>Zrób czym więcej i wróć na snapa :D</h3>
+<h3>Zarejestruj się, potwierdź maila i wróć na snapa ;)</h3>
 <div class='type'>
 </div>
 <!-- NAZWA 2 -->
@@ -611,10 +611,21 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1485/78329348'>Reflink 2</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1479/78329348'>Reflink 3</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/1473/78329348'>Reflink 4</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 5</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1305/78329348'>Reflink 5</a> <br/>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/14/78329348'>Reflink 6</a>
 <a class='about-button' target="_blank" href='https://allgo.xyz/link/115/78329348'>Reflink 7</a>
-<a class='about-button' target="_blank" href='https://allgo.xyz/link/1456/78329348'>Reflink 7</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/1456/78329348'>Reflink 8</a>
+<a class='about-button' target="_blank" href='https://allgo.xyz/link/468/78329348'>Reflink 9</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/Vb1s/nfu'>Reflink 10</a> <br/>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/RbgM/7umD'>Reflink 11</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/xbbn/eivx'>Reflink 12</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/SxRY/WU2u'>Reflink 13</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/El3E/y0Hw'>Reflink 14</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/SND2/wl0M'>Reflink 15</a><br/>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/UF7p/nARt'>Reflink 16</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/07Mf/z57i'>Reflink 17</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/1dpm/14XO'>Reflink 18</a>
+<a class='about-button' target="_blank" href='https://golead.pl/p/ZReg/7mhb/sTI0'>Reflink 19</a>
 
 </div>
 </div>
