--- a/pl.html
+++ b/pl.html
@@ -590,6 +590,7 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
 <br/>
 <h3>Zarejestruj się, potwierdź maila i wróć na snapa ;)</h3>
+<h3>Czym więcej zrobisz tym więcej dostaniesz 😈</h3>
 <div class='type'>
 </div>
 <!-- NAZWA 2 -->
