--- a/index.html
+++ b/index.html
@@ -592,14 +592,14 @@ body#layout{background-color:#F7F7F7} body#layout ul,body#layout li{list-style:n
 <!-- <h5>Snap 👻: emilia_rutk01, Ig 🎬: xxemilia01</h5> -->
 <br/>
 <h5>Skoro tu jesteś, liczysz na więcej? :D</h5>
-<h5>Jak skończysz napisz na snapie: <b>emilia_rutk19</b></h5>
+<h5>Jak skończysz napisz na snapie: <b>emilia_rutk19 / telgram: @twojaemily</b></h5>
 <!-- <h2>Where are you from?</h2> -->
 <!-- NAZWA 2 -->
 <script language='javascript' type='text/javascript'>//<![CDATA[
               $(function() {
                 "use strict";
                 $("header .caption h2").typed({
-                  strings: ["SNAP: emilia_rutk19", "IG: xxemilia01"], 
+                  strings: ["SNAP: emilia_rutk19", "IG: twojaemily", "Telegram: twojaemily"], 
                   loop: true,
                   startDelay: 1e3,
                   backDelay: 2e3
